# made_hpc_2020

./: .gitattributes  .gitignore  README.md
hw1/: hw1.ipynb  raw_js.txt
hw2/: README.md
hw2/bash_scripts/: 1_for_loop.sh  2_array_for_loop.sh  3_sum_decimals.sh  4_if_file_exists.sh
hw2/matrix_dot_product/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  build.sh  cblas_test.cpp  cblas_test.h  conanfile.txt  dot_product.cpp  dot_product.h  dot_product_strassen.cpp  dot_product_strassen.h  main.cpp  matrix.cpp  matrix.h  speed_test.sh  static_linking.sh  vector_col.cpp  vector_col.h  vector_row.cpp  vector_row.h
hw3/: README.md
hw3/axisb/: Axisb.c  CMakeLists.txt
hw3/bug_fixes/: CMakeLists.txt  omp_bugparfoc.c  omp_bugreduction.c
hw3/least_squares/: CMakeLists.txt  LeastSquares.c
hw3/pi_monte_karlo/: CMakeLists.txt  pi_monte_carlo.c
hw4/: README.md
hw4/matrix_power/: CMakeLists.txt  matrix_power.c
hw4/pagerank/: CMakeLists.txt  conanfile.txt  pagerank.c
hw5/: README.md
hw5/1_meeting_people_game/: CMakeLists.txt  meeting_game.c
hw5/2_cellular_automata/: CMakeLists.txt  cellular_automata.c
hw6/: README.md  histogram.ipynb
hw6/blur/: CMakeLists.txt  blur_kernel.cu
hw6/median_filter/: CMakeLists.txt  median_filter.cu
